--- a/client/src/projects.json
+++ b/client/src/projects.json
@@ -6,5 +6,45 @@
         "deployed": "https://mklakhan.github.io/movies-on-the-rocks/",
         "github": "https://github.com/mklakhan/movies-on-the-rocks",
         "image": ""
+    },
+    {
+        "id": 2,
+        "title": "The Culture Blog",
+        "description": "This project is a blog and CMS system about different cultural topics that allows authors to delete their own posts, and allows for non-author users to like posts and add comments that are then appended to a comment box. It also allows for users to chat with each other live. This project was created using Node, Express, Handlebars, Passport and socket.io.",
+        "deployed": "https://gentle-cliffs-54160.herokuapp.com/",
+        "github": "https://github.com/matthayden09/project_2",
+        "image": ""
+    },
+    {
+        "id": 3,
+        "title": "Work Day Scheduler",
+        "description": "This is a daily calendar application that will save notes into local storage in order to help plan out your workday.",
+        "deployed": "https://matthayden09.github.io/work_day_scheduler/",
+        "github": "https://github.com/matthayden09/work_day_scheduler",
+        "image": ""
+    },
+    {
+        "id": 4,
+        "title": "Password Generator",
+        "description": "This is a password generator that will output a random combination of characters.",
+        "deployed": "https://matthayden09.github.io/password_generator/",
+        "github": "https://github.com/matthayden09/password_generator",
+        "image": ""
+    },
+    {
+        "id": 5,
+        "title": "Eat-Da-Burger!",
+        "description": "This is an application that allows a user to add names of delicious burgers to a waiting queue, which can then be clicked to get devoured! Burger data is stored into a connected MySQL database.",
+        "deployed": "https://stormy-hollows-37273.herokuapp.com/",
+        "github": "https://github.com/matthayden09/burger",
+        "image": ""
+    },
+    {
+        "id": 6,
+        "title": "Budget Tracker",
+        "description": "This is an application that allows a user to input deposits and withdraws in order to keep track of their budget while also maintaining functionallity offline. Data will be stored in the connected database.",
+        "deployed": "https://mysterious-tor-18675.herokuapp.com/",
+        "github": "https://github.com/matthayden09/budget_tracker",
+        "image": ""
     }
 ]
